--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,8 @@
-body {
-    padding-left: 20px;
-	padding-right: 20px;
+  body {
+    padding-left: 25px;
+	  padding-right: 25px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    background-image: url("../images/bg1.jpg");
   }
   
   a {
@@ -10,7 +11,7 @@ body {
   a.primaryColor{
     color: #02afee
   }
-  
+
   #primary {
     color: #02afee;
   }
@@ -23,4 +24,3 @@ body {
   #white {
     color: white;
   }
-  
