--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -3,12 +3,7 @@
   <head>
         <% include ../partials/head %>
   </head>
-  <body>
-      <!-- HEADER -->
-          <div class="my-top-header-text">
-              <h1 id="white" href="http://localhost:3000"> Project Cinema </h1>
-          </div>
-    
+  <body>              
         <% include ../partials/header %>
         
         <link rel="stylesheet" href="/stylesheets/uploadFilm.css">
@@ -60,15 +55,12 @@
                     </div>
         
                     <div class="container my-container-center my-bot-form">
-                        <button type="submit" class="btn btn-primary my-btn text-center ng-click="clickUploadFilm()" ng-disabled="!userLogined" style="margin-right:15px">
-                            <i class="fa fa-upload fa-lg" aria-hidden="true"></i>
-                            Upload film
-                        </button>
-                        <!-- <button type="submit" class="btn btn-primary my-btn text-center ng-hide="userLogined" data-toggle="modal"
-                            data-target="#modalLogin">
-                            <i class="fa fa-sign-in fa-lg" aria-hidden="true"></i>
-                            Bạn cần đăng nhập
-                        </button> -->
+                        <div class="col-xs-12 my-upload-btn">
+                            <button type="submit" class="btn btn-primary my-btn text-center" ng-click="clickUploadFilm()" ng-disabled="!userLogined">
+                                <i class="fa fa-upload fa-lg" aria-hidden="true"></i>
+                                Upload film
+                            </button>
+                        </div>
                     </div>
                 </form>
         
