Change href for home icon

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div class="my-top-header-text">
-        <h1 class="my-title" href="http://localhost:3000"> Project Cinema </h1>
+        <h1 class="my-title"> Project Cinema </h1>
 </div>
 
 <!-- NAV BAR -->
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse-1" style="margin-left:-30px;margin-right: -30px">
         <ul class="nav navbar-nav nav-left" style="margin:auto;align-content: center;text-align: center">
             <li class="li-icon my-nav-btn" ng-show="checkPageIndex()" >
-                <a href="http://localhost:3000" id="white">
+                <a href="/" id="white">
                     <i class="fa fa-home" aria-hidden="true" style="font-size:25px" ></i>
                 </a>
             </li>  
